# denox

./: LICENSE  README.md  next.config.ts  package-lock.json  package.json
.github-x/workflows/: deployment.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deployment.yml
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/sql_migrations/: v_1.sql
src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/domains/: layout.tsx  page.tsx
src/app/invoices/: page.tsx
src/app/profiles/: page.tsx
src/app/tags/: layout.tsx  page.tsx
src/components/common/: Check.tsx  ColoredPill.tsx  EmptyListText.tsx  Loader.tsx  Logo.tsx  Providers.tsx  Sidebar.tsx  TableBodySkeleton.tsx
src/components/dnsRecords/: CreateEditDnsRecordModal.tsx  DnsRecordsTab.tsx  DomainDnsRecordCard.tsx  DomainDnsTab.tsx
src/components/domains/: CreateEditDnsRecordModal.tsx  DomainBasicDataContainer.tsx  DomainDnsRecordCard.tsx  DomainDnsTab.tsx  DomainNameserversList.tsx  DomainNavButton.tsx  DomainOverviewTab.tsx  DomainPage.tsx  DomainPeriodProgressCircle.tsx  DomainServicesContainer.tsx  DomainStatusChip.tsx  DomainWebHotelSizeChip.tsx
src/components/forwards/: CreateEditForwardModal.tsx  CreateForwardRow.tsx  DomainForwardsTab.tsx  ForwardsTab.tsx
src/components/illustrations/: IllustrationChill.tsx  IllustrationError.tsx  IllustrationIcons.tsx  IllustrationNotFound.tsx  README.txt
src/css/: globals.css
src/types/tags/: Tag_GET.ts  (+3 more)
src/utils/: globals.ts
(+90 files in other folders)
